Fix: Align

--- a/style.css
+++ b/style.css
@@ -543,11 +543,13 @@ header{
 /* модальное окно №1 */
 
 .our_shows {
+  padding-left: 75px;
+  padding-right: 75px;
   height: fit-content;
   min-height: fit-content;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-end;
   gap: 100px;
 }
